--- a/templates/index.html
+++ b/templates/index.html
@@ -114,6 +114,7 @@
             data-bs-html="true" data-bs-placement="top" data-bs-content="
            <a href='{% url 'sayer' %}' class='dropdown-item'>Sayer</a>
            <a href='{% url 'career' %}' class='dropdown-item'>Carrers</a>
+           <a href='#' class='dropdown-item'>Reminder</a>
            <a href='{% url 'mission_and_vision' %}' class='dropdown-item'>Vison & mission</a>">
             <i class="fa fa-bars text-white"></i>
         </a>
