--- a/templates/schadule.html
+++ b/templates/schadule.html
@@ -115,7 +115,7 @@
                         <select id="start-point" class="form-control form-select">
                             <option value="">Select Starting Point</option>
                             {% for point in starting_points %}
-                            <option value="{{ point.code }}">{{ point.name }}</option>
+                            <option value="{{ point.id }}">{{ point.name }}</option>
                             {% endfor %}
                         </select>
                     </div>
