--- a/templates/route.html
+++ b/templates/route.html
@@ -122,9 +122,11 @@
         </form>
         <!-- Recommended routes -->
         <div class="recommended-list">
-            <div class="row justify-content-between"><h6 class="col-6">Recommended</h6>
-            <div class="col-6"><a href="{% url 'clear_history' %}" class="float-right">Clear history</a></div></div>
-            
+            <div class="row justify-content-between">
+                <h6 class="col-6">Recommended</h6>
+                <div class="col-6"><a href="{% url 'clear_history' %}" class="float-right">Clear history</a></div>
+            </div>
+
             {% for item in history %}
             <div class="recommended-item">
                 <div class="location-info">
@@ -295,6 +297,27 @@
             $('#locationModal').modal('hide');
         });
 
+        // Bus stops data (example locations)
+        // Fetch bus stop data from the server
+        fetch('/bus-stops/')
+            .then(response => response.json())
+            .then(busStops => {
+                // Define a custom bus icon
+                var busIcon = L.icon({
+                    iconUrl: 'https://cdn-icons-png.flaticon.com/512/0/308.png', // Replace with your bus icon URL
+                    iconSize: [15, 15], // Size of the icon
+                    iconAnchor: [12, 12], // Anchor point of the icon (centered)
+                    popupAnchor: [0, -12] // Position of the popup relative to the icon
+                });
+
+                // Add markers for each bus stop
+                busStops.forEach(function (stop) {
+                    L.marker([stop.latitude, stop.longitude], { icon: busIcon })
+                        .bindPopup(`<strong>${stop.name}</strong>`) // Display the bus stop name in a popup
+                        .addTo(map);
+                });
+            })
+            .catch(error => console.error('Error fetching bus stops:', error));
     </script>
 
 </body>
